--- a/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters-modal/meters-modal.component.html
@@ -23,7 +23,7 @@
               </div>
 
           </div>
-          <!-- <div nzSpan="12" nz-col class="row1-col2">
+          <div nzSpan="12" nz-col class="row1-col2">
             <label>Tipo de Medidor</label>
             <div nz-row>
               <nz-form-item  nzFlex>
@@ -35,7 +35,7 @@
               </nz-form-item>
             </div>
 
-          </div> -->
+          </div>
         </div> 
 
         <div nz-row class="row-2">
@@ -122,7 +122,7 @@
             </div>
 
           </div>
-          <!-- <div nzSpan="12" nz-col class="row7-col2">
+          <div nzSpan="12" nz-col class="row7-col2">
             <label>Punto de Conexion</label>
             <div nz-row>
               <nz-form-item  nzFlex>
@@ -135,7 +135,7 @@
             </div>
     
 
-          </div> -->
+          </div>
         </div>
         <div nz-row class="row-8">
           <div nzSpan="24" nz-col class="row8-col1">
