--- a/src/app/modules/menu-layout/components/meters/meters.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters.component.html
@@ -2,183 +2,14 @@
   
 
   <!-- inicia modal -->
-  <button nz-col nzSpan="6" nz-button [nzType]="'primary'" (click)="showModal()"><span>Agregar Medidor Fisico</span></button>
-
-  <nz-modal class="modal" [(nzVisible)]="isVisible" nzTitle="Medidor Fisico" (nzOnCancel)="handleCancel()" (nzOnOk)="submitForm()">
-    <ng-container  *nzModalContent>
-      <form  nz-form [formGroup]="validateForm" nzLayout="horizontal">
-
-        <div nz-row class="row-1">
-          <div nzSpan="12" nz-col class="row1-col1">
-            <nz-form-label>Codigo de Medidor</nz-form-label>
-
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control >
-                  <nz-input-group [nzSuffix]="suffixIconSearch">
-                    <input type="text" nz-input placeholder="Busqueda por Id" id="Id" formControlName="codigo"/>
-                  </nz-input-group>
-                  <ng-template #suffixIconSearch>
-                    <i nz-icon nzType="search"></i>
-                  </ng-template>
-                </nz-form-control>
-                </nz-form-item>
-              </div>
-
-          </div>
-          <!-- <div nzSpan="12" nz-col class="row1-col2">
-            <label>Tipo de Medidor</label>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <nz-radio-group >
-                    <label nz-radio formControlName="medType" [nzValue]="o.value" *ngFor="let o of options">{{ o.label }}</label>
-                  </nz-radio-group>
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-
-          </div> -->
-        </div> 
-
-        <div nz-row class="row-2">
-          <div nzSpan="24" nz-col class="row2-col1">
-            <label>Descripción</label>
-            <div nz-row>
-              <nz-form-item>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="descripcion" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-
-          </div>
-        </div>
-
-        <div nz-row class="row-3">
-          <div nzSpan="24" nz-col class="row3-col1">
-            <label>Serie</label>
-            <div nz-row>
-              <nz-form-item>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Serie" type="text" placeholder="Medidor principal" formControlName="serie" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-
-
-          </div>
-        </div>
-
-        <!-- <div nz-row class="row-4">
-          <div nzSpan="24" nz-col class="row4-col1">
-            <label>Tipo</label>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="Descripcion" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-
-
-          </div>
-        </div> -->
-        <div nz-row class="row-5">
-          <div nzSpan="24" nz-col class="row5-col1">
-            <label>Modelo</label>
-
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="modelo" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-
-
-          </div>
-        </div>
-        <!-- <div nz-row class="row-6">
-          <div nzSpan="24" nz-col class="row6-col1">
-            <label>Direccion IP</label>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder="Medidor sin etiqueta" formControlName="Descripcion" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-            
-
-          </div>
-        </div> -->
-        <div nz-row class="row-7">
-          <div nzSpan="12" nz-col class="row7-col1">
-            <label>Lectura Maxima</label>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <input nz-input id="Descripcion" type="number" placeholder="Medidor sin etiqueta" formControlName="lecturaMax" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>    
-            </div>
-
-          </div>
-          <!-- <div nzSpan="12" nz-col class="row7-col2">
-            <label>Punto de Conexion</label>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <nz-radio-group >
-                    <label nz-radio formControlName="puntoMedicionId" [nzValue]="o.value" *ngFor="let o of options2">{{ o.label }}</label>
-                  </nz-radio-group>
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-    
-
-          </div> -->
-        </div>
-        <div nz-row class="row-8">
-          <div nzSpan="24" nz-col class="row8-col1">
-            <label>Multiplicador</label><br>
-            <div nz-row>
-              <nz-form-item  nzFlex>
-                <nz-form-control>
-                  <input class="inputLarge" nz-input id="Multiplicador" type="number" placeholder="Medidor sin etiqueta" formControlName="multiplicador" [disabled]="false" />
-                </nz-form-control>
-              </nz-form-item>
-
-            </div>
-            
-
-          </div>
-        </div>
-
-        <div nz-row class="row-7">
-          <div nzSpan="12" nz-col class="row1-col1">
-            <nz-form-label  nzRequired>Observacion</nz-form-label>
-            <div nz-row>
-              <nz-form-item>
-                <nz-form-control>
-                  <textarea class="textArea" formControlName="observacion" nz-input rows="2" placeholder="Escriba algo"></textarea>
-                </nz-form-control>
-              </nz-form-item>
-            </div>
-
-          </div>
-        </div>
-      </form>
-    </ng-container>
-  </nz-modal>
+  <!-- <app-meters-modal></app-meters-modal> -->
   <!-- termina modal -->
 
 
 
 <!-- Ecabezado de tabla -->
 
-<nz-table #filterTable [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{ x: '1150px', y: '240px' }">
+<nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{ x: '1150px', y: '240px' }">
   <thead>
     <tr>
       <th nzLeft>Accion</th>
@@ -200,21 +31,21 @@
 <!-- Cuerpo de tabla -->
 
   <tbody>
-    <tr *ngFor="let data of filterTable.data">
+    <tr *ngFor="let data of listOfData">
       <td nzLeft>
         <button class="edit" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-        <button class="delete" nz-button nzType="primary"  nzShape="circle" (click)="DeleteMeter(data.Id)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+        <button class="delete" nz-button nzType="primary"  nzShape="circle" (click)="DeleteMeter(data.idMedidor)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
       </td>
-      <td>{{ data.Id }}</td>
-      <td>{{ data.Codigo }}</td>
-      <td>{{ data.Descripcion }}</td>
-      <td>{{ data.Modelo }}</td>
-      <td>{{ data.Serie }}</td>
-      <td>{{ data.Tipo }}</td>
-      <td nzRight *ngIf="data.Estado === true"> 
+      <td>{{ data.idMedidor }}</td>
+      <td>{{ data.codigoPM }}</td>
+      <td>{{ data.descripcionPM }}</td>
+      <td>{{ data.modeloMedidor }}</td>
+      <td>{{ data.serieMedidor }}</td>
+      <td>{{ data.tipoMedidor }}</td>
+      <td nzRight *ngIf="data.estado === true"> 
         <button class="config" nz-button nzType="primary" >En Contrato</button>
       </td>
-      <td nzRight *ngIf="data.Estado === false"> 
+      <td nzRight *ngIf="data.estado === false"> 
         <button class="warning" nz-button nzType="primary" >Rollover</button>
       </td>
     </tr>
@@ -226,150 +57,12 @@
 <h1>Medidores Virtuales</h1>
 
 <!-- Inicio Modal -->
-
-<button nz-button [nzType]="'primary'" (click)="showModal2()"><span>Agregar Medidor Virtual</span></button>
-<nz-modal [(nzVisible)]="isVisible2" nzTitle="The first Modal" (nzOnCancel)="handleCancel2()" (nzOnOk)="handleOk2()">
-    <ng-container  *nzModalContent>
-        <form  nz-form  nzLayout="horizontal">
-  
-          <div nz-row class="row-1">
-            <div nzSpan="24" nz-col class="row1-col1">
-              <label>Codigo de Medidor</label>
-  
-              <div nz-row>
-                <nz-form-item>
-                  <nz-form-control>
-                    <input class="inputLarge" nz-input id="Descripcion" type="text" placeholder=" MED_1_V " formControlName="descripcion" [disabled]="false" />
-                  </nz-form-control>
-                </nz-form-item>
-                </div>
-  
-            </div>
-
-          </div> 
-          
-
-          <div nz-row class="row-2">
-            <div nzSpan="8" nz-col class="row2-col1">
-                <label>Medidor en operacion</label>
-
-                <div nz-row>
-                    <nz-form-item  nzFlex>
-                      <nz-form-control >
-                        <nz-input-group [nzSuffix]="suffixIconSearch">
-                          <input type="text" nz-input placeholder=" Buscar " id="Id" formControlName="codigo"/>
-                        </nz-input-group>
-                        <ng-template #suffixIconSearch>
-                            <i nz-icon nzType="search"></i>
-                        </ng-template>
-                      </nz-form-control>
-                      </nz-form-item>
-                </div>
-  
-
-            </div>
-
-            <div  nzSpan="8" nz-col class="row2-col2">
-                <label>Operacion</label>
-                <div nz-row>
-                  <nz-form-item>
-                    <nz-form-control>
-                      <input nz-input id="Descripcion" type="text" placeholder=" (+) Suma " formControlName="descripcion" [disabled]="false" />
-                    </nz-form-control>
-                  </nz-form-item>
-                </div>
-
-            </div>
-
-            <div nzSpan="8" nz-col class="row2-col3">
-
-              <label>Porcentaje de consumo</label>
-              <div nz-row>
-                <nz-form-item>
-                  <nz-form-control>
-                    <input nz-input id="Descripcion" type="text" placeholder="(0.5)%" formControlName="descripcion" [disabled]="false" />
-                  </nz-form-control>
-                </nz-form-item>
-              </div>
-  
-            </div>
-  
-        </div>
-        
-          <div nz-row class="row-3">
-
-            <div nzSpan="24" nz-col class="row3-col1">
-              <nz-form-label  nzRequired>Observacion</nz-form-label>
-              <div nz-row>
-                <nz-form-item>
-                  <nz-form-control>
-                    <textarea class="inputLarge" formControlName="observacion" nz-input rows="2" placeholder="Escriba algo"></textarea>
-                  </nz-form-control>
-                </nz-form-item>
-              </div>
-            </div>
-
-          </div>
-
-          <div nz-row class="row-4">
-            <div nz-col [nzSpan]="6"  [nzOffset]="14" class="row4-col1">
-                <nz-form-item  nzFlex>
-                    <button nz-button nzType="default">Cancelar</button>
-                </nz-form-item>
-            </div>
-            <div nz-col [nzSpan]="4" class="row4-col2">
-                <nz-form-item  nzFlex>
-                    <button nz-button nzType="primary">Guardar</button>
-                </nz-form-item>
-
-            </div>
-          </div>
-  
-          <div nz-row class="row-5">
-            <div nz-col>
-                <nz-table #filterTable [nzData]="listOfDataModal" nzTableLayout="fixed" [nzScroll]="{  x: '600px', y: '240px' }"  [nzPageSize]="10">
-                  <thead>
-                    <tr>
-                    <th nzLeft nzWidth="80px">ID</th>
-                      <th
-                        *ngFor="let column of listOfColumns"
-                        [nzSortOrder]="column.sortOrder"
-                        [nzSortFn]="column.sortFn"
-                        [nzSortDirections]="column.sortDirections"
-                        [nzFilterMultiple]="column.filterMultiple"
-                        [nzFilters]="column.listOfFilter"
-                        [nzFilterFn]="column.filterFn"
-                        nzWidth="150px"
-                      >
-                        {{ column.name }}
-                      </th>
-                      <th nzRight nzWidth="80px">Acciones</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let data of filterTable.data">
-                      <td nzLeft>{{ data.name }}</td>
-                      <td>{{ data.age }}</td>
-                      <td>{{ data.address }}</td>
-                      <td nzRight>
-                        <button class="edit" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-                        <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </nz-table>
-                
-            </div>
-          </div>
-        </form>
-      </ng-container>
-</nz-modal>
-
+<!-- <app-virtual-meter-modal></app-virtual-meter-modal> -->
 
 <!-- Fin Modal -->
 <!-- Ecabezado de tabla -->
 
-<nz-table #filterTable2 [nzData]="listOfDataVM" nzTableLayout="fixed" [nzScroll]="{ x: '1150px', y: '240px' }">
+<nz-table [nzData]="listOfDataVM" nzTableLayout="fixed" [nzScroll]="{ x: '1150px', y: '240px' }">
   <thead>
     <tr>
       <th nzLeft>Accion</th>
@@ -391,21 +84,21 @@
 <!-- Cuerpo de tabla -->
 
   <tbody>
-    <tr *ngFor="let data of filterTable2.data">
+    <tr *ngFor="let data of listOfDataVM">
       <td nzLeft>
         <button class="edit" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
-        <button class="delete" nz-button nzType="primary"  nzShape="circle" (click)="DeleteMeter(data.Id)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+        <button class="delete" nz-button nzType="primary"  nzShape="circle" (click)="DeleteMeter(data.idMedidor)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
       </td>
-      <td>{{ data.Id }}</td>
-      <td>{{ data.Codigo }}</td>
-      <td>{{ data.Descripcion }}</td>
-      <td>{{ data.Modelo }}</td>
-      <td>{{ data.Serie }}</td>
-      <td>{{ data.Tipo }}</td>
-      <td nzRight *ngIf="data.Estado === true"> 
+      <td>{{ data.idMedidor }}</td>
+      <td>{{ data.codigoPM }}</td>
+      <td>{{ data.descripcionPM }}</td>
+      <td>{{ data.modeloMedidor }}</td>
+      <td>{{ data.serieMedidor }}</td>
+      <td>{{ data.tipoMedidor }}</td>
+      <td nzRight *ngIf="data.estado === true"> 
         <button class="config" nz-button nzType="primary" >En Contrato</button>
       </td>
-      <td nzRight *ngIf="data.Estado === false"> 
+      <td nzRight *ngIf="data.estado === false"> 
         <button class="warning" nz-button nzType="primary" >Rollover</button>
       </td>
     </tr>
