--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -114,7 +114,7 @@
         </li>
 
         
-        <div nz-menu-item nzMatchRouter>
+        <div routerLink="digital-invoice" nz-menu-item nzMatchRouter>
           <li>
               <i nz-icon nzType="pie-chart"></i>
               <span >Reportes</span>
@@ -138,6 +138,8 @@
                  [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
               ></i>
           </span>
+        <span class="header-title">SISTEMA DE FACTURACION ENERGETICA</span>
+
         </div>
       </nz-header>
       <nz-content>
