Maquetacion de factura

--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -113,8 +113,8 @@
           </ul>
         </li>
 
-        
-        <div routerLink="digital-invoice" nz-menu-item nzMatchRouter>
+          
+        <div routerLink="report" nz-menu-item nzMatchRouter>
           <li>
               <i nz-icon nzType="pie-chart"></i>
               <span >Reportes</span>
