--- a/src/app/shared/components/digital-invoice/digital-invoice.component.css
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.css
@@ -1,10 +1,3 @@
-.ant-btn-primary {
-    color: #fff;
-    background-color: #334d7c;
-    border-color: #334d7c;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
-}
 
 .card-style {
     width: 100%;
@@ -37,7 +30,7 @@ nz-spin {
 }
 
 .cabecera {
-    background-color: #334d7c;
+    background-color: #001529;
     display: flex;
     justify-content: space-between;
 }
@@ -48,7 +41,7 @@ nz-spin {
 }
 
 .titulos {
-    background-color: #334d7c;
+    background-color: #001529;
     display: flex;
     justify-content: space-around;
     width: 80%;
@@ -56,7 +49,7 @@ nz-spin {
 }
 
 .titulos-detalle {
-    background-color: #334d7c;
+    background-color: #001529;
     display: flex;
     justify-content: space-around;
     width: 80%;
@@ -78,7 +71,7 @@ nz-spin {
 .etiqueta-izq {
     font-size: 13px;
     color: black;
-    margin: 0% 0% 3% 42%;
+    margin: 0% 0% 3% 28%;
 }
 
 .etiqueta-der {
@@ -90,7 +83,7 @@ nz-spin {
 .etiqueta-izq-titular {
     font-size: 13px;
     color: black;
-    margin: 0% 0% 2% 42%;
+    margin: 0% 0% 2% 28%;
 }
 
 .etiqueta-der-titular {
@@ -188,13 +181,11 @@ nz-spin {
 }
 
 .calculo-consumo-container {
-    /* display: flex;
-    flex-direction: column; */
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.3fr 0.3fr 1fr;
+    grid-template-rows: 0.3fr 0.3fr 0.3fr;
     gap: 1px 1px;
-    grid-template-areas: "."".""."".";
+    grid-template-areas: ".""."".";
     margin-top: 5px;
 }
 
@@ -225,13 +216,6 @@ nz-spin {
     margin: auto;
 }
 
-.detalle-cliente-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.1fr 0.1fr 1fr;
-    gap: 1px 1px;
-    grid-template-areas: "."".""."".";
-}
 
 .datos-cliente-regulado {
     display: flex;
@@ -255,9 +239,16 @@ nz-spin {
     margin: 1% 5% 1% 5%;
 }
 
+.detalle-cliente-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 0.3fr;
+    grid-template-areas: "."".";
+}
 .contenedor-cliente-regulado {
+    display: grid;
+    grid-template-areas: ". .";
     margin-top: 5px;
-    padding: 3px;
     background-color: #eaeaea;
 }
 
