--- a/src/app/shared/components/digital-invoice/digital-invoice.component.css
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.css
@@ -1,3 +1,8 @@
+.print-btn{
+    position: fixed;
+    overflow: hidden;
+    opacity: 0.6;
+}
 
 .card-style {
     width: 100%;
@@ -7,11 +12,6 @@
 
 .card-small-font {
     font-size: 4px;
-}
-
-nz-spin {
-    display: inline-block;
-    margin-right: 16px;
 }
 
 .grid-container {
