--- a/src/app/modules/menu-layout/components/clients/clients.component.css
+++ b/src/app/modules/menu-layout/components/clients/clients.component.css
@@ -4,3 +4,12 @@
     vertical-align: middle;
     border: 1px solid #ccc;
 }
+
+i[nz-icon] {
+  font-size: 32px;
+  color: #999;
+}
+.ant-upload-text {
+  margin-top: 8px;
+  color: #666;
+}
